@@ -128,6 +128,7 @@ since 1999.  If I missed your name, let me know.
 * Stewart James
 * Olivier Jan
 * Jeff Johnson
+* Jonathan Kamens
 * Andrew Kaplan
 * Lars Kellogg-Stedman
 * Paul Kent
